appId: com.alvarotc.bito
---
- launchApp:
    appId: com.alvarotc.bito
    stopApp: true
- extendedWaitUntil:
    visible: ".*${H_AGUA}.*"
    timeout: 20000
- tapOn: ${L_NAV_STATS}
- extendedWaitUntil:
    visible: ${L_WEEK}
    timeout: 15000
- scrollUntilVisible:
    element:
      text: ".*${L_BADGES}.*"
    direction: DOWN
    timeout: 20000
- tapOn: ".*${L_BADGES}.*"
- extendedWaitUntil:
    visible: ${L_BADGES}
    timeout: 10000
- assertNotVisible: ${L_WEEK}
- swipe:
    start: "50%,80%"
    end: "50%,50%"
    duration: 1500
- waitForAnimationToEnd
- assertVisible: ${L_PERFECT_WEEK}
- assertNotVisible: ${L_CELEBRATION}
- waitForAnimationToEnd
