appId: com.alvarotc.bito
---
- launchApp:
    appId: com.alvarotc.bito
    stopApp: true
- extendedWaitUntil:
    visible: ".*${H_AGUA}.*"
    timeout: 20000
- tapOn: ${L_NAV_STATS}
- extendedWaitUntil:
    visible: ${L_WEEK}
    timeout: 15000
- scrollUntilVisible:
    element:
      text: ".*${L_RECORDS}.*"
    direction: DOWN
    timeout: 20000
- tapOn: ".*${L_RECORDS}.*"
- extendedWaitUntil:
    visible: ".*130.*"
    timeout: 10000
- assertNotVisible: ${L_CELEBRATION}
- waitForAnimationToEnd
