appId: com.alvarotc.bito
---
- launchApp:
    appId: com.alvarotc.bito
    stopApp: true
- extendedWaitUntil:
    visible: ".*${H_AGUA}.*"
    timeout: 20000
- tapOn: ${L_NAV_STATS}
- extendedWaitUntil:
    visible: ${L_WEEK}
    timeout: 15000
- assertNotVisible: ${L_CELEBRATION}
- assertNotVisible: ${L_PERFECT}
- waitForAnimationToEnd
